# AI-driven-customer-support-assistant

./: README.md
ai-customer-support-assistant/: .env.docker  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_database.py  test_db_connection.py  test_ollama.py  verify_setup.py
ai-customer-support-assistant/app/: __init__.py  config.py  main.py
ai-customer-support-assistant/app/api/: dependencies.py
ai-customer-support-assistant/app/api/routes/: ask.py  history.py
ai-customer-support-assistant/app/core/: __init__.py  exceptions.py  logging.py
ai-customer-support-assistant/app/db/: __init__.py  base.py  init_db.py  session.py
ai-customer-support-assistant/app/db/repositories/: __init__.py  query_repository.py
ai-customer-support-assistant/app/services/: knowledge_base.py  llm_wrapper.py
ai-customer-support-assistant/app/utils/: prompt_builder.py
ai-customer-support-assistant/data/: knowledge_base.md
ai-customer-support-assistant/tests/: conftest.py  test_main.py
ai-customer-support-assistant/tests/test_api/: test__api_history.py  test_api_ask.py
ai-customer-support-assistant/tests/test_db/: __init__.py  test_knowledge_base.md  test_repositories.py
ai-customer-support-assistant/tests/test_services/: test_knowledge_base.py  test_llm_wrapper.py
